src/libqgraphicssceneevent.bf

public struct QGraphicsSceneHelpEvent
{
	[LinkName("QGraphicsSceneHelpEvent_new")]
	public static extern void* QGraphicsSceneHelpEvent_new();
	[LinkName("QGraphicsSceneHelpEvent_new2")]
	public static extern void* QGraphicsSceneHelpEvent_new2(int64 typeVal);
	[LinkName("QGraphicsSceneHelpEvent_ScenePos")]
	public static extern QPointF QGraphicsSceneHelpEvent_ScenePos(void* c_this);
	[LinkName("QGraphicsSceneHelpEvent_SetScenePos")]
	public static extern void QGraphicsSceneHelpEvent_SetScenePos(void* c_this, QPointF pos);
	[LinkName("QGraphicsSceneHelpEvent_ScreenPos")]
	public static extern QPoint QGraphicsSceneHelpEvent_ScreenPos(void* c_this);
	[LinkName("QGraphicsSceneHelpEvent_SetScreenPos")]
	public static extern void QGraphicsSceneHelpEvent_SetScreenPos(void* c_this, QPoint pos);
}
public struct QGraphicsSceneDragDropEvent
{
	[LinkName("QGraphicsSceneDragDropEvent_new")]
	public static extern void* QGraphicsSceneDragDropEvent_new();
	[LinkName("QGraphicsSceneDragDropEvent_new2")]
	public static extern void* QGraphicsSceneDragDropEvent_new2(int64 typeVal);
	[LinkName("QGraphicsSceneDragDropEvent_Pos")]
	public static extern QPointF QGraphicsSceneDragDropEvent_Pos(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetPos")]
	public static extern void QGraphicsSceneDragDropEvent_SetPos(void* c_this, QPointF pos);
	[LinkName("QGraphicsSceneDragDropEvent_ScenePos")]
	public static extern QPointF QGraphicsSceneDragDropEvent_ScenePos(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetScenePos")]
	public static extern void QGraphicsSceneDragDropEvent_SetScenePos(void* c_this, QPointF pos);
	[LinkName("QGraphicsSceneDragDropEvent_ScreenPos")]
	public static extern QPoint QGraphicsSceneDragDropEvent_ScreenPos(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetScreenPos")]
	public static extern void QGraphicsSceneDragDropEvent_SetScreenPos(void* c_this, QPoint pos);
	[LinkName("QGraphicsSceneDragDropEvent_Buttons")]
	public static extern int64 QGraphicsSceneDragDropEvent_Buttons(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetButtons")]
	public static extern void QGraphicsSceneDragDropEvent_SetButtons(void* c_this, int64 buttons);
	[LinkName("QGraphicsSceneDragDropEvent_Modifiers")]
	public static extern int64 QGraphicsSceneDragDropEvent_Modifiers(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetModifiers")]
	public static extern void QGraphicsSceneDragDropEvent_SetModifiers(void* c_this, int64 modifiers);
	[LinkName("QGraphicsSceneDragDropEvent_PossibleActions")]
	public static extern int64 QGraphicsSceneDragDropEvent_PossibleActions(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetPossibleActions")]
	public static extern void QGraphicsSceneDragDropEvent_SetPossibleActions(void* c_this, int64 actions);
	[LinkName("QGraphicsSceneDragDropEvent_ProposedAction")]
	public static extern int64 QGraphicsSceneDragDropEvent_ProposedAction(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetProposedAction")]
	public static extern void QGraphicsSceneDragDropEvent_SetProposedAction(void* c_this, int64 action);
	[LinkName("QGraphicsSceneDragDropEvent_AcceptProposedAction")]
	public static extern void QGraphicsSceneDragDropEvent_AcceptProposedAction(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_DropAction")]
	public static extern int64 QGraphicsSceneDragDropEvent_DropAction(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetDropAction")]
	public static extern void QGraphicsSceneDragDropEvent_SetDropAction(void* c_this, int64 action);
	[LinkName("QGraphicsSceneDragDropEvent_Source")]
	public static extern QWidget QGraphicsSceneDragDropEvent_Source(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetSource")]
	public static extern void QGraphicsSceneDragDropEvent_SetSource(void* c_this, QWidget source);
	[LinkName("QGraphicsSceneDragDropEvent_MimeData")]
	public static extern QMimeData QGraphicsSceneDragDropEvent_MimeData(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetMimeData")]
	public static extern void QGraphicsSceneDragDropEvent_SetMimeData(void* c_this, QMimeData data);
}
public struct QGraphicsSceneResizeEvent
{
	[LinkName("QGraphicsSceneResizeEvent_new")]
	public static extern void* QGraphicsSceneResizeEvent_new();
	[LinkName("QGraphicsSceneResizeEvent_OldSize")]
	public static extern QSizeF QGraphicsSceneResizeEvent_OldSize(void* c_this);
	[LinkName("QGraphicsSceneResizeEvent_SetOldSize")]
	public static extern void QGraphicsSceneResizeEvent_SetOldSize(void* c_this, QSizeF size);
	[LinkName("QGraphicsSceneResizeEvent_NewSize")]
	public static extern QSizeF QGraphicsSceneResizeEvent_NewSize(void* c_this);
	[LinkName("QGraphicsSceneResizeEvent_SetNewSize")]
	public static extern void QGraphicsSceneResizeEvent_SetNewSize(void* c_this, QSizeF size);
}
public struct QGraphicsSceneMoveEvent
{
	[LinkName("QGraphicsSceneMoveEvent_new")]
	public static extern void* QGraphicsSceneMoveEvent_new();
	[LinkName("QGraphicsSceneMoveEvent_OldPos")]
	public static extern QPointF QGraphicsSceneMoveEvent_OldPos(void* c_this);
	[LinkName("QGraphicsSceneMoveEvent_SetOldPos")]
	public static extern void QGraphicsSceneMoveEvent_SetOldPos(void* c_this, QPointF pos);
	[LinkName("QGraphicsSceneMoveEvent_NewPos")]
	public static extern QPointF QGraphicsSceneMoveEvent_NewPos(void* c_this);
	[LinkName("QGraphicsSceneMoveEvent_SetNewPos")]
	public static extern void QGraphicsSceneMoveEvent_SetNewPos(void* c_this, QPointF pos);
}